# color50

./: .gitignore  LICENSE  README.md  color.py  colorstr.py  csscolors.json  project.py  pyproject.toml  readthedocs.yaml  test_project.py
color50/: __init__.py  color.py  colorstr.py  constants.py  core_functions.py
demos/: demo1.py  demo2.py  demo3.py  demo4.py
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: api.rst  color50.rst  conf.py  demo.rst  index.rst  intro.rst  modules.rst  usage.rst
src/color50/: __init__.py  color.py  colorstr.py  constants.py  core_functions.py
tests/: demo.py
