# Daniel Fletcher
# Harvard CS50P 2023
# Final Project

# pyproject.toml
# Package configuration file

# Modeled after packaging tutorial found at:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "color50"
version = "1.0.0"
authors = [
    { name="Daniel Fletcher", email="dfletcher-mail@proton.me" }
]
description = "Placeholder description"
keywords = [
    "color50",
    "color",
    "console",
    "terminal",
    "CS50",
    "CS50P",
    "Harvard",
    "Harvard University"
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Console Fonts"
]

[project.urls]
GitHub = "https://github.com/danielthefletch/color50.git"
Documentation = "https://color50.readthedocs.io/en/latest/"
"CS50P Class Website" = "https://cs50.harvard.edu/python/2022/"

[tool.setuptools]
packages = [ "color50" ]
